Add Fun section and some other content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: William Cutler
+subtitle: 
 ---
+
+Hello and welcome! 
+<br>
+<br> 
+While I may have originally intended this website to be another way for employers to see my resume, I remembered I already had
+a LinkedIn, and could therefore use this personal website for other things, namely making connections with other people, professional or otherwise.
+<br>
+<br>
+Therefore, in addition to being a centralized place for saving things I've made and done, I see this website as a kind of profile on the internet. 
+If you find anything interesting, and you'd like to reach out (contact in footer) and have a chat, whether its professional, intellectual, or because we like the same wind ensemble music, please do so! 
+Happy to oblige.
